--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -72,30 +72,6 @@ input, select, textarea {
 	appearance: none;
 }
 
-/* Styles spécifiques pour le header - GUIGUI */
-#header {
-    display: flex;
-    align-items: center;  /* Aligne verticalement le logo et le titre */
-    justify-content: flex-start; /* Aligne à gauche */
-    padding: 10px;
-}
-
-#header .logo-container {
-    display: flex;
-    align-items: center;
-}
-
-#header .logo {
-    height: 40px;  /* Ajuste cette valeur selon la taille du logo souhaitée */
-    margin-right: 10px;  /* Espace entre le logo et le titre */
-}
-
-#header .site-title {
-    font-size: 2em;  /* Ajuste la taille du titre */
-    margin: 0;
-    line-height: 1;  /* Assure un bon alignement vertical avec le logo */
-}
-
 /* Basic */
 
 	@-ms-viewport {
@@ -1850,58 +1826,64 @@ input, select, textarea {
 
 /* Header */
 
-	#header {
-		position: fixed;
-		z-index: 10000;
-		left: 0;
-		top: 0;
-		width: 100%;
-		background: rgba(255, 255, 255, 0.95);
-		height: 3em;
-		line-height: 3em;
-		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
-	}
+#header {
+    position: fixed;
+    z-index: 10000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    background: rgba(255, 255, 255, 0.95);
+    height: 3em;
+    line-height: 3em;
+    box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
+    display: flex;
+    align-items: center;
+}
 
-		#header h1 {
-			position: absolute;
-			left: 1em;
-			top: 0;
-			height: 3em;
-			line-height: 3em;
-			cursor: default;
-		}
+#logo {
+    height: 2em; /* Ajuste la taille du logo en fonction du texte */
+    margin-right: 0.5em; /* Espace entre le logo et le titre */
+}
+
+#header h1 {
+    height: 3em;
+    line-height: 3em;
+    cursor: default;
+    display: inline-flex;
+    align-items: center; /* Centre le texte verticalement */
+}
 
 			#header h1 a {
 				font-size: 1.25em;
 			}
 
-		#header nav {
-			position: absolute;
-			right: 0.5em;
-			top: 0;
-			height: 3em;
-			line-height: 3em;
-		}
-
+			#header nav {
+				position: absolute;
+				right: 0.5em;
+				top: 0;
+				height: 3em;
+				line-height: 3em;
+			}
+			
 			#header nav ul {
 				margin: 0;
 			}
-
-				#header nav ul li {
-					display: inline-block;
-					margin-left: 0.5em;
-					font-size: 0.9em;
-				}
-
-					#header nav ul li a {
-						display: block;
-						color: inherit;
-						text-decoration: none;
-						height: 3em;
-						line-height: 3em;
-						padding: 0 0.5em 0 0.5em;
-						outline: 0;
-					}
+			
+			#header nav ul li {
+				display: inline-block;
+				margin-left: 0.5em;
+				font-size: 0.9em;
+			}
+			
+			#header nav ul li a {
+				display: block;
+				color: inherit;
+				text-decoration: none;
+				height: 3em;
+				line-height: 3em;
+				padding: 0 0.5em 0 0.5em;
+				outline: 0;
+			}
 
 		@media screen and (max-width: 736px) {
 
