--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1841,7 +1841,8 @@ input, select, textarea {
 }
 
 #logo {
-    height: 2em; /* Ajuste la taille du logo en fonction du texte */
+    height: 2em; /* Ajuste la taille du logo */
+    width: auto; /* Laisse l'aspect du logo inchangé */
     margin-right: 0.5em; /* Espace entre le logo et le titre */
 }
 
