--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -504,7 +504,7 @@ input, select, textarea {
 		font-weight: 300;
 		font-size: 18pt;
 		line-height: 1.75em;
-		color: #39454b;
+		color: #101010;
 		letter-spacing: 0.025em;
 	}
 
